26 June 2006: Wouter
	- Nicer check in autoconf for struct timespec type.
	- NSEC3 next hashed ownername is a length byte followed by data.
	- nsd-checkconf more quiet, clearer error message.
	- NSEC3 does not complain about glue records without nsec3.
	- nsdc work (did start, stop, running, rebuild, restart, reload, stats).

21 June 2006: Wouter
	- nsid commandline parsed using hex_pton routine.
	- unit test for hex_pton.
	- added include stdlib, needed for free() on sunos4.
	- fixup of disable-ipv6 compilation.
	- memmove compat implementation (created fresh).
	- yy_set_bol() for old flex compat define.
	- compat implementation from openssh4.3p2 for
	  strlcpy, inet_aton, and inet_ntop routines.
	- changed ctime_r usage to ctime() call, nsd is not threaded.
	- compiles on SunOS4/gcc-2.95.
	- debug statements go to the log_msg route instead of the
	  fprintf route, so they will get to a nice logfile even if
	  we forked away, with xfrd. logfile=/dev/stderr gives old way.
	- minor changes to cutest to make unit test compile
	  on SunOS4/gcc-2.95, it checks out fine there.

20 June 2006: Wouter
	- updated configure to disable -O2 on platforms where gcc 
	  does not like it (such as dec-alpha).
	- nsd-notify used recvfrom and passed addrinfo.ai_addrlen
	  which is a size_t, but recfrom needs a socklen_t*. On dec
	  alpha these types differ in size (size_t is 64bit, 
	  socklen_t is 32bit). Therefore, used a wrapper variable
	  to pass to recvfrom.
	- changed long int to time_t in nsd-patch.c to please compiler
	  on dec alpha.
	- dec alpha complains if statements are in front of variable
	  definitions. Fixed code for some mixups on this.
	- Fixup cutest for dec alpha. Code, lowercase filename, %lf->%f.
	- cutest fixup uses (size_t) cast and %zx to print ptrs (for debug).
	- for SunOS4 configure detects ssize_t and struct timespec.
	- removed usage of fpos_t, instead using fseeko/ftello for 64bit.