@@ -1,3 +1,7 @@
+27 June 2006: Wouter
+	- Fixed read in server.c to be a blocking read for sure,
+	  even if ipc is not blocking on the OS.
+
 26 June 2006: Wouter
 	- Nicer check in autoconf for struct timespec type.
 	- NSEC3 next hashed ownername is a length byte followed by data.
